<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sort_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sortTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_marginEnd="@dimen/margin_horizontal"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:isScrollContainer="true"
        android:scrollbars="vertical"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sortButton"
        tools:text="@tools:sample/lorem/random"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/scroll_arrow_up_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_marginBottom="@dimen/scroll_button_margin"
        app:srcCompat="@android:drawable/arrow_up_float"
        android:contentDescription="@string/scroll_arrow_up"
        app:layout_constraintEnd_toEndOf="@id/sortTextView"
        app:layout_constraintBottom_toTopOf="@+id/scroll_arrow_down_sort" />

    <ImageButton
        android:id="@+id/scroll_arrow_down_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        app:srcCompat="@android:drawable/arrow_down_float"
        android:contentDescription="@string/scroll_arrow_down"
        app:layout_constraintEnd_toEndOf="@+id/sortTextView"
        app:layout_constraintBottom_toBottomOf="@+id/sortTextView" />

    <Button
        android:id="@+id/sortButton"
        style="@style/RoundedCornerButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:layout_marginEnd="@dimen/margin_horizontal"
        android:background="@drawable/button_selector"
        android:enabled="true"
        android:gravity="center"
        android:text="@string/sort_button"
        app:layout_constraintTop_toBottomOf="@+id/sortTextView"
        app:layout_constraintBottom_toTopOf="@id/sortRadioGroup"
        />

    <RadioGroup
        android:id="@+id/sortRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:layout_marginEnd="@dimen/margin_horizontal"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:checkedButton="@id/mergeSortRadioButton"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/sortButton"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible">

        <RadioButton
            android:id="@+id/mergeSortRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/merge_sort_radio_button" />

        <RadioButton
            android:id="@+id/bubbleSortRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bubble_sort_radio_button" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>